# devops-course

./: Dockerfile  README.md  docker-compose.yaml  inventory.ini  key  key.pub  monitor-output.txt  output.txt  playbook.yaml
helloserver/: go.mod
monitor/: Dockerfile  go.mod  go.sum  main.go  subscriber.go
service1/: Dockerfile  go.mod  main.go  publisher.go
service2/: Cargo.toml  Dockerfile
service2/src/: main.rs
