[package]
name = "service2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tokio"] }
futures-lite = "1.13.0"
lapin = "2.3.1"
tokio = { version = "1.32.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
